<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/profile_background"
    tools:context=".ui.users.common.ProfileFragment" >

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.03" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_profile"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline3h"
        tools:ignore="TextContrastCheck" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:src="@drawable/baseline_arrow_back_24"
        android:tint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline3h"
        tools:ignore="ImageContrastCheck" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline20h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.20" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline90h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.90" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cardLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/_12sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline20h"
        app:layout_constraintBottom_toBottomOf="@id/guideline90h"
        android:background="@drawable/profile_card" >

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline15h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.15" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/primary_color"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline15h"
            tools:ignore="TextContrastCheck" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline25h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.25" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/specialistIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:src="@drawable/specialist_icon_profile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline25h"
            tools:ignore="ImageContrastCheck" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/specialistText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_14sdp"
            android:text="@string/specialist_doctor_profile"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintTop_toTopOf="@id/specialistIcon"
            app:layout_constraintBottom_toBottomOf="@id/specialistIcon"
            app:layout_constraintStart_toEndOf="@id/specialistIcon" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/genderIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:src="@drawable/gender_icon_profile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/specialistIcon"
            tools:ignore="ImageContrastCheck" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/genderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_14sdp"
            android:text="@string/male"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintTop_toTopOf="@id/genderIcon"
            app:layout_constraintBottom_toBottomOf="@id/genderIcon"
            app:layout_constraintStart_toEndOf="@id/genderIcon" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/dateIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:src="@drawable/date_icon_profile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/genderIcon"
            tools:ignore="ImageContrastCheck" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/dateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_14sdp"
            android:text="@string/_29_03_1997"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintTop_toTopOf="@id/dateIcon"
            app:layout_constraintBottom_toBottomOf="@id/dateIcon"
            app:layout_constraintStart_toEndOf="@id/dateIcon" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/locationIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:src="@drawable/location_icon_profile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dateIcon"
            tools:ignore="ImageContrastCheck" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/locationText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_14sdp"
            android:text="@string/mansoura_shirben"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintTop_toTopOf="@id/locationIcon"
            app:layout_constraintBottom_toBottomOf="@id/locationIcon"
            app:layout_constraintStart_toEndOf="@id/locationIcon" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/statusIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:src="@drawable/status_icon_profile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/locationIcon"
            tools:ignore="ImageContrastCheck" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/statusText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_14sdp"
            android:text="@string/single"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintTop_toTopOf="@id/statusIcon"
            app:layout_constraintBottom_toBottomOf="@id/statusIcon"
            app:layout_constraintStart_toEndOf="@id/statusIcon" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/emailIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:src="@drawable/email_icon_profile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/statusIcon"
            tools:ignore="ImageContrastCheck" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/emailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_14sdp"
            android:text="@string/ebrahemelzainy_gmail_com"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintTop_toTopOf="@id/emailIcon"
            app:layout_constraintBottom_toBottomOf="@id/emailIcon"
            app:layout_constraintStart_toEndOf="@id/emailIcon" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/phoneIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:src="@drawable/phone_icon_profile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailIcon"
            tools:ignore="ImageContrastCheck" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/phoneText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_14sdp"
            android:text="@string/_096521145523"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintTop_toTopOf="@id/phoneIcon"
            app:layout_constraintBottom_toBottomOf="@id/phoneIcon"
            app:layout_constraintStart_toEndOf="@id/phoneIcon" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ellipseProfilePhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ellipse_profile_photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/cardLayout"
        app:layout_constraintBottom_toTopOf="@id/cardLayout" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ellipseProfilePhotoPerson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/profile_person"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/cardLayout"
        app:layout_constraintBottom_toTopOf="@id/cardLayout" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ellipseEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ellipse_profile_edit"
        app:layout_constraintBottom_toBottomOf="@id/cardLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardLayout"
        tools:ignore="ImageContrastCheck" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/editButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/edit_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardLayout"
        app:layout_constraintBottom_toBottomOf="@id/cardLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>