<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:backgroundTint="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.users.hr.HrHomeFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline15h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline40h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.40" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline45h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline70h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.70" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline50v"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50" />

    <ImageView
        android:id="@+id/personImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/person"
        android:layout_marginStart="@dimen/_6sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline5h" />

    <TextView
        android:id="@+id/personName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_5sdp"
        android:text="@string/mohamed_ramadan"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/personImage"
        app:layout_constraintStart_toEndOf="@id/personImage" />

    <TextView
        android:id="@+id/personPosition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/specialist_hr"
        android:textColor="@color/primary_color"
        app:layout_constraintStart_toStartOf="@id/personName"
        app:layout_constraintTop_toBottomOf="@id/personName" />

    <ImageView
        android:id="@+id/notificationIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_4sdp"
        android:src="@drawable/notification"
        app:layout_constraintEnd_toEndOf="@id/tasksCard"
        app:layout_constraintTop_toTopOf="@id/personImage" />

    <androidx.cardview.widget.CardView
        android:id="@+id/callsCard"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardCornerRadius="@dimen/_6sdp"
        android:layout_marginBottom="@dimen/_4sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        app:layout_constraintTop_toTopOf="@id/guideline15h"
        app:layout_constraintBottom_toBottomOf="@id/guideline45h"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline50v" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/orange_card" >

            <ImageView
                android:id="@+id/employeeIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/employee_icon"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/employeeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:text="@string/employee"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="@id/employeeIcon"
                app:layout_constraintEnd_toEndOf="@id/employeeIcon"
                app:layout_constraintTop_toBottomOf="@id/employeeIcon" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/reportsCard"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_4sdp"
        app:cardCornerRadius="@dimen/_6sdp"
        app:layout_constraintStart_toStartOf="@id/callsCard"
        app:layout_constraintEnd_toEndOf="@id/callsCard"
        app:layout_constraintTop_toTopOf="@id/guideline45h"
        app:layout_constraintBottom_toBottomOf="@id/guideline70h" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/purple_card" >

            <ImageView
                android:id="@+id/reportsIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/reports_icon"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/reportsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:text="@string/reports"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="@id/reportsIcon"
                app:layout_constraintEnd_toEndOf="@id/reportsIcon"
                app:layout_constraintTop_toBottomOf="@id/reportsIcon" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/tasksCard"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardCornerRadius="@dimen/_6sdp"
        android:layout_marginBottom="@dimen/_4sdp"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        app:layout_constraintTop_toTopOf="@id/callsCard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline50v"
        app:layout_constraintBottom_toBottomOf="@id/guideline40h" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/green_card" >

            <ImageView
                android:id="@+id/tasksIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/tasks_icon"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tasksText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:text="@string/tasks"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="@id/tasksIcon"
                app:layout_constraintEnd_toEndOf="@id/tasksIcon"
                app:layout_constraintTop_toBottomOf="@id/tasksIcon" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/attendanceCard"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardCornerRadius="@dimen/_6sdp"
        android:layout_marginTop="@dimen/_4sdp"
        app:layout_constraintTop_toTopOf="@id/guideline40h"
        app:layout_constraintBottom_toBottomOf="@id/guideline70h"
        app:layout_constraintStart_toStartOf="@id/tasksCard"
        app:layout_constraintEnd_toEndOf="@id/tasksCard" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/primary_color_card" >

            <ImageView
                android:id="@+id/attendanceIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/attendance_icon"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/attendanceText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:text="@string/attendance_leaving"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="@id/attendanceIcon"
                app:layout_constraintEnd_toEndOf="@id/attendanceIcon"
                app:layout_constraintTop_toBottomOf="@id/attendanceIcon" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>